Fixed image and button alignment in flexbox, finished part four

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
 }
 
+/*Part one*/ 
 .part-one {
     background-color: #1f2937;
 }
@@ -34,8 +35,8 @@ ul, a {
 .title {
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 48px;
+    justify-content: space-between;
+    gap: 45px;
     padding: 40px 100px;
     flex: 1;
 }
@@ -47,15 +48,9 @@ ul, a {
     border-radius: 12px;
     margin: 0;
     padding: 0;
-}
-
-.crochet-image {
     display: flex;
-    flex: 1;
     justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
+    align-items: space-around;
 }
 
 .title-container {
@@ -70,7 +65,7 @@ h1 {
     color: #f9faf8;
     font-size: 70px;
     font-weight: 900;
-    margin: 20px;
+    margin: 0px;
     padding: 0;
 }
 
@@ -90,6 +85,7 @@ p {
     border-style: none;
 }
 
+/*Part two*/ 
 h2 {
     text-align: center;
     font-size: 38px;
@@ -127,6 +123,7 @@ h2 {
     padding: 12px;
 }
 
+/*Part three*/
 .part-three {
     background-color: #e5e7eb;
     text-align: center;
@@ -153,3 +150,47 @@ h2 {
     color: black;
     font-weight: bold;
 }
+
+/*Part four*/
+.part-four {
+    background-color: #3882f6;
+    margin: 65px 130px;
+    padding: 45px;
+    border-radius: 6px;
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+}
+
+.part-four-text {
+    display: flex;
+    flex-direction: column;
+    color:#f9faf8;
+    font-size: 20px;
+    gap: 12px;
+    flex: 2;
+}
+ .hurry {
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+ }
+
+ .sign-up-2 {
+    background-color: #3882f6;
+    border: 5px solid white;
+    font-weight: bold;
+    font-size: 28px;
+    border-radius: 18px;
+    padding: 12px 58px;
+    color: white;
+    text-align: center;
+ }
+
+ .button-container {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-around;
+ }
